# agenticoptio-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  test-project-setup.md  test.sh
docs/: howtopublish.md
examples/: basic_usage.rs  streaming_example.rs  test_embeddings.rs
src/: lib.rs
src/core/: messages.rs  mod.rs
src/models/: base.rs  mod.rs  ollama.rs
tests/: integration_test.rs
