[package]
name = "agentic_optio_rs"
version = "0.1.1"
edition = "2021"
authors = ["Raja CSP Raman <raja.csp@gmail.com>"]
description = "Production-grade multi-agent framework with minimal dependencies - Rust implementation"
license = "MIT"
repository = "https://github.com/kactlabs/agenticoptio-rs"
documentation = "https://docs.rs/agentic_optio_rs"
keywords = ["ai", "llm", "chat", "embeddings", "ollama"]
categories = ["api-bindings", "asynchronous"]
rust-version = "1.70"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Error handling
thiserror = "1.0"
anyhow = "1.0"
# Async traits
async-trait = "0.1"
# Streaming
futures = "0.3"
tokio-stream = "0.1"
bytes = "1.5"

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "agentic_optio_rs"
path = "src/lib.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "streaming_example"
path = "examples/streaming_example.rs"
